updated card body

--- a/index.html
+++ b/index.html
@@ -19,6 +19,51 @@
         </div>
     </header>
 
+    <main class="container-fluid">
+        <div class="row">
+            <section class="col-12 col-md-4 col-lg-3">
+                <div class="card custom-card">
+                    <h3 class="card-header">
+                        Instructions
+                    </h3>
+                    <div class="card-body">
+                        <div class="card-text">
+                            Click the button below to open a form and provide information for the following:
+                        </div>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Project Name</li>
+                        <li class="list-group-item">Project Type</li>
+                        <li class="list-group-item">Due Date</li>
+                        <li class="list-group-item">Hourly Rate</li>
+                    </ul>
+                    <div class="card-footer">
+                        <button class="btn btn-block custom-btn" data-toggle="modal" data-target="#project-modal">
+                            Project
+                        </button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="col-12 col-md-8 col-lg-9">
+                <div class="table-responsive">
+                    <table class="table table-bordered custom-table">
+                        <thead>
+                            <tr>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </section>
+        </div>
+    </main>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
