--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
                     <table class="table table-bordered custom-table">
                         <thead>
                             <tr>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
+                                <th scope="col">Project Name</th>
+                                <th scope="col">Project Type</th>
+                                <th scope="col">Hourly Rate ($)</th>
+                                <th scope="col">Due Date</th>
+                                <th scope="col">Days Until Due Date</th>
+                                <th scope="col">Potential Total Earnings ($)</th>
+                                <th scope="col" class="p-3"></th>
                             </tr>
                         </thead>
                     </table>
