--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
                                 <th scope="col" class="p-3"></th>
                             </tr>
                         </thead>
+                        <tbody id="project-display"></tbody>
                     </table>
                 </div>
             </section>
         </div>
     </main>
+
+    <!-- Modal -->
+    <div class="modal fade custom-modal" id="project-modal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
+        
+    </div>
 
 
 
