--- a/index.html
+++ b/index.html
@@ -67,8 +67,25 @@
     </main>
 
     <!-- Modal -->
-    <div class="modal fade custom-modal" id="project-modal" tabindex="-1" role="dialog" aria-labelledby="project-modal-form" aria-hidden="true">
-        
+    <div class="modal fade custom-modal" id="project-modal" tabindex="-1" role="dialog"
+        aria-labelledby="project-modal-form" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="project-modal-form">Add a new project.</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                        <span aria-hidden="true">&times:</span>
+                    </button>
+                </div>
+                <form id="project-form">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="project-name-input">Project Name</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
 
