upsted the form group

--- a/index.html
+++ b/index.html
@@ -81,7 +81,22 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="project-name-input">Project Name</label>
+                            <input type="text" id="project-name-input" class="form-control"
+                                placeholder="Enter the project's name" required>
                         </div>
+                        <div class="form-group">
+                            <label for="project-type-input">Project Type</label>
+                            <select id="project-type-input" class="form-control">
+                                <option selected disabled>Pick one...</option>
+                                <option value="Web Applicatin (Front End)">Web Application (Front End)</option>
+                                <option value="Web Applicatin (Back End)">Web Application (Back End)</option>
+                                <option value="Web Applicatin (Full Stack)">Web Application (Full Stack)</option>
+                                <option value="Mobile Application">Mobile Application</option>
+                                <option value="Print Campaign">Print Campaign</option>
+                                <option value="Digital Marketing Campaign">Digital Marketing Campaign</option>
+                            </select>
+                        </div>
+
                     </div>
                 </form>
             </div>
