--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                                 <option value="Digital Marketing Campaign">Digital Marketing Campaign</option>
                             </select>
                         </div>
+                        <div class="form-group">
+                            <label for="hourly-rate-input">Hourly Rate ($)</label>
+                            <input type="number" id="hourly-rate-input" class="form-control" placeholder="$" min="0" required>
+                        </div>
 
                     </div>
                 </form>
