added a footer for the modal

--- a/index.html
+++ b/index.html
@@ -98,9 +98,18 @@
                         </div>
                         <div class="form-group">
                             <label for="hourly-rate-input">Hourly Rate ($)</label>
-                            <input type="number" id="hourly-rate-input" class="form-control" placeholder="$" min="0" required>
+                            <input type="number" id="hourly-rate-input" class="form-control" placeholder="$" min="0"
+                                required>
                         </div>
-
+                        <div class="form-group">
+                            <label for="hourly-rate-input">Due Date</label>
+                            <input type="number" id="hourly-rate-input" class="form-control" placeholder="$" min="0"
+                                required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn custom-btn">Submit Project Info</button>
                     </div>
                 </form>
             </div>
