--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                                 required>
                         </div>
                         <div class="form-group">
-                            <label for="hourly-rate-input">Due Date</label>
-                            <input type="number" id="hourly-rate-input" class="form-control" placeholder="$" min="0"
+                            <label for="due-date-input">Due Date</label>
+                            <input type="text" min="1" id="due-date-input" class="form-control" placeholder="When is the project due" 
                                 required>
                         </div>
                     </div>
